<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:background="@drawable/bg_item_card"
    android:padding="12dp">

    <ImageView
        android:id="@+id/iv_history_record_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/ic_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_history_record_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/history_page_item_title"
        android:textColor="@color/black_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/iv_history_record_icon"
        app:layout_constraintStart_toEndOf="@+id/iv_history_record_icon"
        app:layout_constraintEnd_toStartOf="@+id/iv_history_favorite"
        />
    <TextView
        android:id="@+id/tv_history_record_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_page_item_category"
        android:textColor="@color/grey_text"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_history_record_title"
        app:layout_constraintBottom_toBottomOf="@+id/iv_history_record_icon"
        />
    <TextView
        android:id="@+id/tv_history_record_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_page_item_time"
        android:textColor="@color/grey_text"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/iv_history_favorite"
        app:layout_constraintEnd_toStartOf="@+id/iv_history_favorite"
        />
    <ImageView
        android:id="@+id/iv_history_favorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:padding="2dp"
        android:src="@drawable/ic_favorites_unselected"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        android:id="@+id/iv_history_checkbox"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:padding="2dp"
        android:src="@mipmap/ic_history_checkbox_unselected"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>