<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_root"
    android:background="@color/grey">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Create_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">
            <TextView
                android:id="@+id/tv_create_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_page_title"
                android:textColor="@color/black_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <LinearLayout
                android:id="@+id/layout_create_page_history"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_item_card"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/tv_create_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <View
                    android:id="@+id/view_history_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@mipmap/ic_history_selected"
                    />
                <TextView
                    android:id="@+id/tv_createItem_history"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="14dp"
                    android:text="@string/create_page_history"
                    android:textSize="16sp"
                    android:textColor="@color/black_text"
                    android:textStyle="bold"
                    />
                <ImageView
                    android:id="@+id/iv_create_page_history_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_check"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_create_page_clipboard"
                android:layout_width="0dp"
                android:layout_height="98dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_item_card"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/layout_create_page_history"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <View
                    android:id="@+id/view_clipboard_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@mipmap/ic_clipboard"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="14dp">
                    <TextView
                        android:id="@+id/tv_crete_page_clipboard_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_page_clipboard"
                        android:textColor="@color/black_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:text="@string/create_page_clipboard_text"
                        android:textColor="@color/grey_text"
                        android:textSize="12dp"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/iv_create_page_clipboard_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_check"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_create_page_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/layout_create_page_clipboard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/create_RCView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_create_page_share"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/bg_item_card"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/layout_create_page_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <View
                    android:id="@+id/view_share_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@mipmap/ic_share_selected"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:text="@string/create_page_shareBtn"
                    android:textSize="16sp"
                    android:textColor="@color/black_text"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/create_page_feedbackBtn"
                android:textColor="@color/grey_text"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/layout_create_page_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>